--- a/gomod2nix.toml
+++ b/gomod2nix.toml
@@ -14,6 +14,14 @@
     rev = "36bdd4b98823bd1d7be96767cde3dd575e60b406"
     sha256 = "0hjzb61m5lzx95xss82wil9s8f9hbw1zb3jj73ljfwkq5lqk76zq"
 
+["github.com/alecthomas/chroma/v2"]
+  sumVersion = "v2.5.0"
+  ["github.com/alecthomas/chroma/v2".fetch]
+    type = "git"
+    url = "https://github.com/alecthomas/chroma"
+    rev = "4bfa1bbb7c2d8d8737f1ef9b87c0a3f63ae014f2"
+    sha256 = "1wjkpshq3301wc41v23118fjbik169wqbcnz6rxixalxg53a3vss"
+
 ["github.com/alessio/shellescape"]
   sumVersion = "v1.4.1"
   ["github.com/alessio/shellescape".fetch]
@@ -23,12 +31,12 @@
     sha256 = "14zypi8qdxl77lks5b9jshr17idrm4sri1rxgpw5q4dys1palddd"
 
 ["github.com/alexflint/go-arg"]
-  sumVersion = "v1.4.2"
+  sumVersion = "v1.4.3"
   ["github.com/alexflint/go-arg".fetch]
     type = "git"
     url = "https://github.com/alexflint/go-arg"
-    rev = "eb0393e9bc0bbd8d3cc37a6ee98c1d538e4e5c91"
-    sha256 = "1f2z6i2n9niy6wypd41ikzizws7bl43fr852z4af5hd41dynx6p0"
+    rev = "f0f44b65d1179ccedb4c56f493f97ec569a6654e"
+    sha256 = "1ca7l6kf2v203pmh2jscdm0hp9rg3zfy8k5jnf9y9ga9pkxfhmvs"
 
 ["github.com/alexflint/go-scalar"]
   sumVersion = "v1.1.0"
@@ -111,12 +119,12 @@
     sha256 = "12fmkdhyv5d4is8s57k78j097zb0phlgnrkqc03agiszxlid69x7"
 
 ["github.com/klauspost/compress"]
-  sumVersion = "v1.14.1"
+  sumVersion = "v1.15.0"
   ["github.com/klauspost/compress".fetch]
     type = "git"
     url = "https://github.com/klauspost/compress"
-    rev = "8f61aab31a7d742056adc7c1bbe6f0ae00315358"
-    sha256 = "15aacja1nyqcj37377r2wdznh1bgs1ipcyr7m3hy0m6izgk9bib4"
+    rev = "3cfb088132fccad51a8acfb2d238db1fb56583fd"
+    sha256 = "1b75kzb3vqspbw65zjqmj0waw5jyy6na7aqr6hg8f4d4mmwlbr13"
 
 ["github.com/klauspost/cpuid"]
   sumVersion = "v1.2.0"
@@ -143,20 +151,20 @@
     sha256 = "1py186hfy4p69wghqmbsyi1r3xvw1nyl55pz8f97a5qhmwxb3mwp"
 
 ["github.com/nwaples/rardecode"]
-  sumVersion = "v1.1.2"
+  sumVersion = "v1.1.3"
   ["github.com/nwaples/rardecode".fetch]
     type = "git"
     url = "https://github.com/nwaples/rardecode"
-    rev = "9a2ccbc233ec3001ab5c92434a204037b83a9474"
-    sha256 = "1v89hkai3qr5kizqhdsn4kg5vskpxbxz7fpbldfvn8g7756q0v6z"
+    rev = "434b4a38896d211779c5cc5e5933c9da424a5a21"
+    sha256 = "0s00b8a9gppka3yxkxh7z5wy0ahygl8wbb0fbyx2r0rj879a1c2z"
 
 ["github.com/pierrec/lz4/v4"]
-  sumVersion = "v4.1.12"
+  sumVersion = "v4.1.14"
   ["github.com/pierrec/lz4/v4".fetch]
     type = "git"
     url = "https://github.com/pierrec/lz4"
-    rev = "a134e63e138e8dcef0be0a90bb586bccf4e99651"
-    sha256 = "19xl67xbwfcd7bd85a3s1c1ybc3khvbihhfrskhbblmc3bi6cgdj"
+    rev = "a5532e5996ee86d17f8ce2694c08fb5bf3c6b471"
+    sha256 = "15ln2hja6mn22lv6hirf1hvfavn45avdns081l4w0krzhb9l6hfp"
 
 ["github.com/pmezard/go-difflib"]
   sumVersion = "v1.0.0"
@@ -167,12 +175,12 @@
     sha256 = "0c1cn55m4rypmscgf0rrb88pn58j3ysvc2d0432dp3c6fqg6cnzw"
 
 ["github.com/sirupsen/logrus"]
-  sumVersion = "v1.8.1"
+  sumVersion = "v1.9.0"
   ["github.com/sirupsen/logrus".fetch]
     type = "git"
     url = "https://github.com/sirupsen/logrus"
-    rev = "bdc0db8ead3853c56b7cd1ac2ba4e11b47d7da6b"
-    sha256 = "0rvqzic2zz7fpxyizmqxwmhv1m52ii9bgxnqa6km8wsa0l08wh42"
+    rev = "f8bf7650dccb756cea26edaf9217aab85500fe07"
+    sha256 = "12i402dxq5js4npnncg043vx874h6nk4ffn4gswcccxrp6h10ivz"
 
 ["github.com/stretchr/objx"]
   sumVersion = "v0.1.0"
@@ -207,12 +215,12 @@
     sha256 = "178r0fa2dpzxf0sabs7dn0c8fa7vs87zlxk6spkn374ls9pir7nq"
 
 ["golang.org/x/sys"]
-  sumVersion = "v0.0.0-20220111092808-5a964db01320"
+  sumVersion = "v0.0.0-20220715151400-c0bba94af5f8"
   ["golang.org/x/sys".fetch]
     type = "git"
     url = "https://go.googlesource.com/sys"
-    rev = "5a964db013201115fcba5c3d31ade965d0969335"
-    sha256 = "1r5vmmfk6apa86dr1ydpf1jy9xrw4gbrcrk0vv5in7vzz2cypbwi"
+    rev = "c0bba94af5f85fbad9f6dc2e04ed5b8fac9696cf"
+    sha256 = "0l55yp8fy2yd18hjxq4w44hrhyz41i64ccz1fnc5z7w8rxypfm3q"
 
 ["golang.org/x/xerrors"]
   sumVersion = "v0.0.0-20191204190536-9bdfabe68543"
