--- a/tests/config
+++ b/tests/config
@@ -1,18 +1,18 @@
 # detects: fpath, sh: no
-fpath .*/tests/fpath-no-sh$ bat --map-syntax :Markdown --paging=never --style=numbers --color=always %pistol-filename%
+fpath .*/tests/inputs/fpath-no-sh$ bat --map-syntax :Markdown --paging=never --style=numbers --color=always %pistol-filename%
 # detects: fpath, sh: yes
-fpath .*/tests/fpath-with-sh$ sh: bat --map-syntax :Markdown --paging=never --style=numbers --color=always %pistol-filename% | head -2
+fpath .*/tests/inputs/fpath-with-sh$ sh: bat --map-syntax :Markdown --paging=never --style=numbers --color=always %pistol-filename% | head -2
 # detects: mimetype, sh: no
 text/html elinks -dump -dump-color-mode 1 %pistol-filename%
 # detects: mimetype, sh: yes
 text/plain sh: bat --map-syntax :Markdown --paging=never --style=numbers --color=always %pistol-filename% | head -1
 # Test extra arguments
-fpath .*/tests/VERSION.bz2$ bzcat %pistol-extra0% %pistol-extra1% %pistol-filename%
+fpath .*/tests/inputs/VERSION.bz2$ bzcat %pistol-extra0% %pistol-extra1% %pistol-filename%
 # Test extra arguments
-fpath .*/tests/renovate.json5.bz2$ bzcat %pistol-filename%
+fpath .*/tests/inputs/renovate.json5.bz2$ bzcat %pistol-filename%
 # Test exit code is non-zero in case a command does not exist:
 application/x-bzip2 not-a-real-command %pistol-filename%
 # Test exit code is non-zero in case a command starts but fails to finish
-fpath .*/tests$ bat %pistol-filename%
+fpath .*/tests/inputs$ bat %pistol-filename%
 # Test substitution of multiple extra arguments without spaces between (#56)
-fpath .*/tests/multi-extra echo %pistol-filename% %pistol-extra0%x%pistol-extra1%
+fpath .*/tests/inputs/multi-extra echo %pistol-filename% %pistol-extra0%x%pistol-extra1%
