--- a/gomod2nix.toml
+++ b/gomod2nix.toml
@@ -4,6 +4,9 @@ schema = 3
   [mod."al.essio.dev/pkg/shellescape"]
     version = "v1.5.1"
     hash = "sha256-4pii6K/7lU09qYq4HfZ8dsIw2/8IDExaev2VEtYOMt0="
+  [mod."github.com/STARRY-S/zip"]
+    version = "v0.2.1"
+    hash = "sha256-eyvVeAHIUhzNIVKCfYzNTFDcMq2OuIfaIcMoEz+T68o="
   [mod."github.com/adrg/xdg"]
     version = "v0.5.3"
     hash = "sha256-bo6tBgHS+3sl6f4oWpmdFrZjfV6eA/3xAlysSW0bIEs="
@@ -35,8 +38,8 @@ schema = 3
     version = "v0.1.1-0.20211127135329-3de4ff29dc49"
     hash = "sha256-pswPuqwLhSIS9+oddaIgJ0Ar6kk8Wra5p/Cpqy9Qj9I="
   [mod."github.com/dsnet/compress"]
-    version = "v0.0.2-0.20210315054119-f66993602bf5"
-    hash = "sha256-GnSByoeb8UVVJwcxQhWitLihPly12l+zz+E7Lbk4Xbc="
+    version = "v0.0.2-0.20230904184137-39efe44ab707"
+    hash = "sha256-/Mvh1pOcUU8NbighklpwoSvS60bp9nk3Lj/QtkJPmiM="
   [mod."github.com/dustin/go-humanize"]
     version = "v1.0.1"
     hash = "sha256-yuvxYYngpfVkUg9yAmG99IUVmADTQA0tMbBXe0Fq0Mc="
@@ -74,8 +77,8 @@ schema = 3
     version = "v0.0.16"
     hash = "sha256-NC+ntvwIpqDNmXb7aixcg09il80ygq6JAnW0Gb5b/DQ="
   [mod."github.com/mholt/archiver/v4"]
-    version = "v4.0.0-alpha.8"
-    hash = "sha256-fk56IWQLI2w0fNoYOrNNPbxiOO3PV4znacNUzxcsl74="
+    version = "v4.0.0-alpha.9"
+    hash = "sha256-ow/IORKEVnFjIHE0EB1N1utNS1NKSTZd8RNhrNqHY64="
   [mod."github.com/nwaples/rardecode/v2"]
     version = "v2.0.0-beta.4"
     hash = "sha256-+SB1HrgF/Cb4Eo+qIaOuaNif+y2XsXccmpU0N0GT/ew="
@@ -91,6 +94,9 @@ schema = 3
   [mod."github.com/sirupsen/logrus"]
     version = "v1.9.3"
     hash = "sha256-EnxsWdEUPYid+aZ9H4/iMTs1XMvCLbXZRDyvj89Ebms="
+  [mod."github.com/sorairolake/lzip-go"]
+    version = "v0.3.5"
+    hash = "sha256-2zvduBHMt9Jhg1VWAIHg9VV+lzxw3x/N9hGBfn5SENE="
   [mod."github.com/therootcompany/xz"]
     version = "v1.0.1"
     hash = "sha256-SujtLzRINpXKEyldKuRYrTfhsLLop12PpdlY0F18/88="
